# solana-firehose

./: Cargo.toml  README.md  build.rs
ci/: cargo-build-test.sh
proto/: basic.proto  pipe.proto
src/: accounts_selector.rs  broadcast.rs  convert.rs  firehose.rs  geyser_plugin_firehose.rs  lib.rs  manager.rs  server.rs  shm.rs  utility.rs
tests/: test_firehose_plugin.rs
