[package]
authors = ["Solpipe Maintainers <maintainers@solpipe.io>"]
edition = "2021"
name = "solana-geyser-plugin-firehose"
description = "The Solana AccountsDb plugin for Firehose."
version = "1.14.10"
repository = "https://github.com/solpipe/firehose"
license = "Apache-2.0"
homepage = "https://solpipe.io"
documentation = "https://docs.rs/solpipe-firehoser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.26.0"
bs58 = "0.4.0"
bytemuck = "1.12.1"
chrono = { version = "0.4.22", features = ["serde"] }
crossbeam-channel = "0.5.6"
libc = "0.2.134"
log = "0.4.17"
openssl = { version = "0.10.42" }
prost = "0.11.6"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface = { version = "=1.14.10" }
solana-logger = { version = "=1.14.10" }
solana-measure = { version = "=1.14.10" }
solana-metrics = { version = "=1.14.10" }
solana-runtime = { version = "=1.14.10" }
solana-sdk = { version = "=1.14.10" }
solana-transaction-status = { version = "=1.14.10" }
thiserror = "1.0.37"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-stream = { version = "0.1", optional = false }
tonic = "0.8.3"
tonic-reflection = "0.6.0"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
socket2 = { version = "0.4.7", features = ["all"] }

solana-account-decoder = { version = "=1.14.10" }
solana-core = { version = "=1.14.10" }
solana-local-cluster = { version = "=1.14.10" }
solana-net-utils = { version = "=1.14.10" }
solana-streamer = { version = "=1.14.10" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
#targets = ["x86_64-apple-darwin"]
targets = ["x86_64-unknown-linux-gnu"]


[build-dependencies]
tonic-build = "0.8.3"
